--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "npm run build && npm run run",
+    "run": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^2.5.5",
+    "axios": "^0.19.2",
     "comfy.js": "^1.0.15",
     "dotenv": "^8.2.0",
     "rss-parser": "^3.7.6",
@@ -17,7 +21,9 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0"
+    "clean-webpack-plugin": "^3.0.0",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.1",
