--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "npm run build && npm run run",
-    "run": "node ."
+    "start": "npm run build && npm run serve",
+    "serve": "node ."
   },
   "keywords": [],
   "author": "",
